# Robotic_Assistant_for_Lip_Moisturizing

./: .gitignore  README.md  Reference.md
care/: package.xml  setup.cfg  setup.py
care/care/: care.py
care/launch/: care_facedetec.launch.xml  rviz.launch.xml
face_recognition/: video_facial_landmarks.py
face_recognition_ros_node/: package.xml  setup.cfg  setup.py
face_recognition_ros_node/config/: face.rviz
face_recognition_ros_node/face_recognition_ros_node/: face_detec_ros.py
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/backup_src/: hello_moveit_prev.cpp
hello_moveit/config/: kinematics.yaml
hello_moveit/launch/: hello_moveit.launch.xml  moveit.launch.xml
hello_moveit/src/: hello_moveit.cpp  hello_moveit_trash.cpp
hello_moveit/srdf/: wx200-ee.srdf.xacro
hello_moveit/urdf/: wx200-ee.urdf.xacro
moveit_python/: package.xml  setup.cfg  setup.py
moveit_python/moveit_python/: move_group_node.py
ros_april_tag/: package.xml  setup.cfg  setup.py
ros_april_tag/config/: rviz.config.rviz  tags.yaml
ros_april_tag/launch/: detect_tag.launch.xml
